--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -2,3 +2,8 @@
   base = "client"
   publish = "build"
   command = "npm install && npm run build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
