--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
