--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
+    "react-datepicker": "^8.5.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
