few changes to clg reachout and new candidate reachout added(further testing is there)

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ client/src/pages/CollegeOutreachDashboard/old
 
 server/models/oldcollegeModel.js
 server/controllers/oldcollegeController.js
+
+
+client/src/pages/JobLeads/old
