--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GaNIT School",
-  "name": "GaNIT School",
+  "short_name": "GANIT School",
+  "name": "GANIT School",
   "icons": [
     {
       "src": "favicon.ico",
